WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67126
Web Inspector: cached permanent redirects doesn't show redirect code and text in Network panel
https://bugs.webkit.org/show_bug.cgi?id=67126
Summary
Web Inspector: cached permanent redirects doesn't show redirect code and text...
Ilya Tikhonovsky
Reported
2011-08-29 06:48:28 PDT
%subj%
Attachments
[patch] initial version
(2.93 KB, patch)
2011-08-29 06:50 PDT
,
Ilya Tikhonovsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ilya Tikhonovsky
Comment 1
2011-08-29 06:50:57 PDT
Created
attachment 105486
[details]
[patch] initial version
Yury Semikhatsky
Comment 2
2011-08-29 07:07:25 PDT
Comment on
attachment 105486
[details]
[patch] initial version This change could be tested.
Ilya Tikhonovsky
Comment 3
2011-08-29 07:11:47 PDT
Comment on
attachment 105486
[details]
[patch] initial version Clearing flags on attachment: 105486 Committed
r93974
: <
http://trac.webkit.org/changeset/93974
>
Ilya Tikhonovsky
Comment 4
2011-08-29 07:11:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug