Web Inspector: cached permanent redirects don't show redirect code and text in Network panel. https://bugs.webkit.org/show_bug.cgi?id=67126

Reviewed by Yury Semikhatsky.

* inspector/InspectorResourceAgent.cpp:
(WebCore::buildObjectForResourceResponse):
* inspector/front-end/NetworkPanel.js:
(WebInspector.NetworkDataGridNode.prototype._refreshStatusCell):

Canonical link: https://commits.webkit.org/82916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93974 268f45cc-cd09-0410-ab3c-d52691b4dbfc